<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xero.interview.bankrecmatchmaker.FindMatchActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/toolbar_elevation"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/transaction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:gravity="right|center_vertical"
            android:singleLine="true"
            android:text="@string/transaction_name"
            android:textColor="@color/text_title_subtext"
            android:textSize="@dimen/text_size_subtext" />

        <TextView
            android:id="@+id/transactionAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:gravity="left|center_vertical"
            android:singleLine="true"
            android:textColor="@color/text_title_subtext"
            android:textSize="@dimen/text_size_subtext" />

        <Button
            android:id="@+id/btnAutoAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="+"
            android:layout_weight="0.3"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/match_text"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:gravity="right|center_vertical"
            android:singleLine="true"
            android:text="@string/select_matches"
            android:textColor="@color/text_title_subtext"
            android:textSize="@dimen/text_size_subtext" />

        <TextView
            android:id="@+id/match_count"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="?attr/colorPrimary"
            android:elevation="@dimen/toolbar_elevation"
            android:gravity="left|center_vertical"
            android:singleLine="true"
            android:layout_weight="1"
            android:textColor="@color/text_title_subtext"
            android:textSize="@dimen/text_size_subtext" />

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" >

    </android.support.v7.widget.RecyclerView>

</LinearLayout>
